--- a/style.css
+++ b/style.css
@@ -446,6 +446,10 @@ h1.glow {
         font-size: 50px;
     }
 
+    .popup-content {
+        padding: 30px 20px;
+    }
+
     #popup-message {
         font-size: 20px;
     }
